# PPM_retriever

./: README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
PPMretriever/: __init__.py  api.py
PPMretriever/retriever/: config.py  data_file_handler.py  data_folder_handler.py  parameters.json  retriever.py
PPMretriever/utils/: column_names_raw_files.py  dept_code.py  droits_code.py  field_names.py  forme_juridique_code.py  group_code.py  plots_from_excel.py
