[project]
name = 'PPM retriever'
requires-python = ">=3.0"
version = "1.0.0"
authors = [{name = "Antoine PETIT", email = "antoine.petit@energie-fonciere.fr"}, ]

[build-system]
requires = ["setuptools>=61.0", "pandas==2.2.3", "numpy==2.1.3", "openpyxl==3.1.5"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"*" = ["*.csv", "*.txt"]
