[build-system]
requires = ["setuptools>=61.0", "wheel>=0.37.1", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'PPMretriever'
version = "1.0.0"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.0"
authors = [{name = "Antoine PETIT", email = "antoine.petit@energie-fonciere.fr"}, ]
dependencies = ["pandas>=2", "numpy>=1.22.4", "openpyxl>=3"]

[tool.setuptools.package-data]
PPMretriever = ["*.csv", "*.txt"]
